--- a/style.css
+++ b/style.css
@@ -6,24 +6,25 @@ body{
 }
 table{
     background-color: #FDEBD0;
-    border: 3px solid #000;
+    border: 4px solid #000;
     width: 50rem;
     text-align: center;
+    border-spacing: 5px;
 }
 th{
     background-color: #F8C471;
-    border: 1px solid #000;
+    border: 2px solid #000;
     padding: 0.5rem;
 }
 td{
-    border: 1px solid #000;
+    border: 2px solid #000;
     padding: 0.5rem;
 }
 .dia{
     background-color: #EC7063;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     color: #fff;
 }
 .borderojo{
-    border: 1px solid red;
+    border: 2px solid red;
 }
